[package]
authors = ["Jil Sahm"]
name = "bulldog"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["tracing", "datadog"]
description = "A tracing layer for sending spans to Datadog"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
